product card overflow fixed

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -324,6 +324,7 @@
      .site-header {
          box-shadow: 0 0 5px #000000;
      }
+
      .nav-link {
          margin-left: 0px !important;
      }
@@ -895,9 +896,11 @@
          box-sizing: border-box !important;
 
      }
-.nav-link {
+
+     .nav-link {
          margin-left: 20px;
      }
+
      .container,
      .container-fluid {
          padding-right: 40px !important;
@@ -5021,15 +5024,17 @@
 
  /*======================================= store product card  ================================================*/
  .productt-cardd {
-     width: 272px;
+     width: 100%;
+     max-width: 272px;
      height: 371px;
      border: 1px solid #0000001A;
      border-radius: 12px;
+     margin: 0 auto;
  }
 
  .productt-cardd img {
-     width: 272px;
-     height: 256px;
+     width: 100%;
+     height: 230px;
      border-radius: 12px;
 
  }
@@ -5124,7 +5129,7 @@
  }
 
  .stars i {
-     font-size: 14px;
+     font-size: 12px;
      color: #C4C4C4;
      /* gray star */
  }
